@@ -1,6 +1,9 @@
 
 style "default"
 {
+	GtkWidget::focus-line-pattern = "\1\1"
+	GtkOptionMenu::indicator-spacing = { 1, 1, 1, 1 }
+	GtkOptionMenu::indicator-size = { 1, 1 }
 	engine "clearlooks" {}
 }
 
