@@ -1,3 +1,9 @@
+2007-05-29  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* test/*:
+	Improved test coverage, and now also running with
+	G_SLICE=debug-blocks. It now is able to find eg. bug #438456.
+
 2007-05-25  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* engines/support/cairo-support.c: (ge_hsb_from_color):
